resources/nexus/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
  labels:
    istio-injection: enabled
