resources/nexus/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus
spec:
  selector:
    matchLabels:
      app: nexus
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
        - name: nexus
          image: bromles/nexus3:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
            - name: docker-registry
              containerPort: 5000
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus-data
      securityContext:
        runAsUser: 200
        runAsGroup: 200
        fsGroup: 200
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: nexus-pvc
