resources/nexus/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-svc
  namespace: nexus
  labels:
    app: nexus
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
    - name: docker-registry
      port: 5000
  selector:
    app: nexus
