resources/nexus/base/httproute-docker-registry.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: docker-registry-route
  namespace: nexus
spec:
  parentRefs:
  - name: global-gateway
    namespace: global-gateway
    sectionName: nexus-docker-http-gw
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: nexus-svc
      port: 5000
