resources/nexus/base/httproute-nexus.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nexus-route
  namespace: nexus
spec:
  parentRefs:
  - name: global-gateway
    namespace: global-gateway
    sectionName: global-http-gw
  rules:
  - matches:
    - path:
        value: /nexus
    backendRefs:
    - name: nexus-svc
      port: 8081
